Source/WebInspectorUI/UserInterface/Views/AlignmentEditor.css
/*
 * Copyright (C) 2021 Apple Inc. All rights reserved.
 *
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted provided that the following conditions
 * are met:
 * 1. Redistributions of source code must retain the above copyright
 *    notice, this list of conditions and the following disclaimer.
 * 2. Redistributions in binary form must reproduce the above copyright
 *    notice, this list of conditions and the following disclaimer in the
 *    documentation and/or other materials provided with the distribution.
 *
 * THIS SOFTWARE IS PROVIDED BY APPLE INC. AND ITS CONTRIBUTORS ``AS IS''
 * AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
 * THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
 * PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL APPLE INC. OR ITS CONTRIBUTORS
 * BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
 * CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
 * SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
 * INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
 * CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
 * ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF
 * THE POSSIBILITY OF SUCH DAMAGE.
 */

.alignment-editor .glyph {
    display: inline-block;
    width: 16px;
    height: 16px;
    background-color: var(--background-color-content);
    box-sizing: content-box;
    border: 1px solid var(--border-color);
    color: var(--glyph-color);
}

.alignment-editor .glyph:not(:last-child) {
    border-inline-end-width: 0;
}

.alignment-editor .glyph:active {
    color: var(--glyph-color-pressed);
}

.alignment-editor .glyph.selected {
    color: var(--glyph-color-active);
    border-color: var(--glyph-color-active);
}

.alignment-editor .glyph.selected + .glyph {
    border-inline-start-color: var(--glyph-color-active);
}

.alignment-editor .glyph.selected:active {
    color: var(--glyph-color-active-pressed);
    outline-color: var(--glyph-color-active-pressed);
}

.alignment-editor .glyph.rotate-left > svg {
    rotate: -90deg;
}

