Web Inspector: Increase padding around icons in Alignment editor https://bugs.webkit.org/show_bug.cgi?id=234036 <rdar://problem/86543279>
Reviewed by Devin Rousso.

Increase margin and padding around the icons, making the icons more visually appealing
and easier to distinguish and from each other.

* UserInterface/Images/AlignContentStretch.svg:
The gap between rectangles was only 0.5px. Increase it to 2px.

* UserInterface/Views/AlignmentEditor.css:
(.alignment-editor .glyph):
(.alignment-editor .glyph:not(:first-child)):
(.alignment-editor .glyph.selected):
(.alignment-editor .glyph.selected:active):
(.alignment-editor .glyph:not(:last-child)): Deleted.
(.alignment-editor .glyph.selected + .glyph): Deleted.



Canonical link: https://commits.webkit.org/245914@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287870 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/AlignmentEditor.css
+++ b/Source/WebInspectorUI/UserInterface/Views/AlignmentEditor.css
@@ -27,14 +27,15 @@
     display: inline-block;
     width: 16px;
     height: 16px;
+    padding: 2px;
     background-color: var(--background-color-content);
     box-sizing: content-box;
     border: 1px solid var(--border-color);
     color: var(--glyph-color);
 }
 
-.alignment-editor .glyph:not(:last-child) {
-    border-inline-end-width: 0;
+.alignment-editor .glyph:not(:first-child) {
+    margin-inline-start: 2px;
 }
 
 .alignment-editor .glyph:active {
@@ -42,17 +43,14 @@
 }
 
 .alignment-editor .glyph.selected {
-    color: var(--glyph-color-active);
+    background-color: var(--glyph-color-active);
     border-color: var(--glyph-color-active);
-}
-
-.alignment-editor .glyph.selected + .glyph {
-    border-inline-start-color: var(--glyph-color-active);
+    color: var(--selected-foreground-color);
 }
 
 .alignment-editor .glyph.selected:active {
-    color: var(--glyph-color-active-pressed);
-    outline-color: var(--glyph-color-active-pressed);
+    background-color: var(--glyph-color-active-pressed);
+    border-color: var(--glyph-color-active-pressed);
 }
 
 .alignment-editor .glyph.rotate-left > svg {
